WIP: migrate enKarma to AGP 8 / MaterialComponents